--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.2.0",
     "commander": "^10.0.1",
+    "express": "^4.18.2",
     "svelte": "^3.59.1"
   },
   "type": "module",
