--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.2.0",
     "commander": "^10.0.1",
-    "express": "^4.18.2",
-    "svelte": "^3.59.1"
+    "express": "^4.18.2"
   },
   "type": "module",
   "exports": {
@@ -26,7 +25,10 @@
   "bin": {
     "unding": "./src/cli.js"
   },
-  "devDependencies": {
-    "vite": "^4.3.7"
+  "devDependencies": {},
+  "peerDependencies": {
+    "svelte": "^3.59.1",
+    "vite": "^4.3.7",
+    "vite-plugin-ssr": "^0.4.123"
   }
 }
