--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.2.0",
+    "@trpc/server": "^10.26.0",
     "commander": "^10.0.1",
     "express": "^4.18.2",
-    "vite-plugin-ssr": "^0.4.124"
+    "vite-plugin-ssr": "^0.4.124",
+    "zod": "^3.21.4"
   },
   "type": "module",
   "exports": {
@@ -27,7 +29,6 @@
   "bin": {
     "unding": "./src/cli.js"
   },
-  "devDependencies": {},
   "peerDependencies": {
     "svelte": "^3.59.1",
     "vite": "^4.3.7"
