--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.2.0",
+    "@trpc/client": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "commander": "^10.0.1",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "vite-plugin-ssr": "^0.4.124",
     "zod": "^3.21.4"
   },
@@ -23,6 +25,7 @@
     "./pages/+onRenderHtml.js": "./src/pages/+onRenderHtml.js",
     "./pages/+onRenderClient.js": "./src/pages/+onRenderClient.js",
     "./pages/+config.js": "./src/pages/+config.js",
+    "./trpc": "./src/trpc/client.js",
     "./vite": "./src/vite/index.js",
     ".": "./src/index.js"
   },
