--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -10,17 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.2.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.1",
     "commander": "^10.0.1",
     "express": "^4.18.2",
-    "vite-plugin-ssr": "^0.4.124"
+    "vite-plugin-ssr": "^0.4.131"
   },
   "type": "module",
   "exports": {
     "./package.json": "./package.json",
     "./pages/+onRenderHtml.js": "./src/pages/+onRenderHtml.js",
     "./pages/+onRenderClient.js": "./src/pages/+onRenderClient.js",
-    "./pages/+config.js": "./src/pages/+config.js",
+    "./pages/+config.js": "./src/pages/+config.h.js",
     "./vite": "./src/vite/index.js",
     ".": "./src/index.js"
   },
