--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -10,26 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.1",
-    "commander": "^10.0.1",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
+    "@unding/renderer": "workspace:^",
+    "commander": "^11.0.0",
     "express": "^4.18.2",
-    "vite-plugin-ssr": "^0.4.131"
+    "vite": "^4.4.9",
+    "vite-plugin-ssr": "^0.4.140"
   },
   "type": "module",
-  "exports": {
-    "./package.json": "./package.json",
-    "./pages/+onRenderHtml.js": "./src/pages/+onRenderHtml.js",
-    "./pages/+onRenderClient.js": "./src/pages/+onRenderClient.js",
-    "./pages/+config.js": "./src/pages/+config.h.js",
-    "./vite": "./src/vite/index.js",
-    ".": "./src/index.js"
-  },
   "bin": {
     "unding": "./src/cli.js"
   },
-  "devDependencies": {},
   "peerDependencies": {
-    "svelte": "^3.59.1",
-    "vite": "^4.3.7"
+    "svelte": "^4"
   }
 }
