--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
     "svelte": "^4.2.0",
     "vite-plugin-ssr": "^0.4.140"
   },
   "exports": {
     ".": "./src/renderer/+config.js",
     "./renderer/onRenderHtml": "./src/renderer/onRenderHtml.js",
-    "./renderer/onRenderClient": "./src/renderer/onRenderClient.js"
+    "./renderer/onRenderClient": "./src/renderer/onRenderClient.js",
+    "./vite": "./src/vite/index.js",
+    "./vike": "./src/vike/index.js"
   }
 }
