--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.5",
     "@unding/renderer": "workspace:^",
     "commander": "^11.0.0",
     "express": "^4.18.2",
-    "vite": "^4.4.9",
-    "vite-plugin-ssr": "^0.4.140"
+    "vite": "^4.4.9"
   },
   "type": "module",
   "bin": {
