--- a/packages/unding/package.json
+++ b/packages/unding/package.json
@@ -13,7 +13,8 @@
     "@unding/renderer": "workspace:^",
     "commander": "^11.0.0",
     "express": "^4.18.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "zod": "^3.22.2"
   },
   "type": "module",
   "bin": {
